* Increases the jdk version to 15 * Adds Changelog specific for this version * Modifies the Travis build to manage the jdk15 version